# openFGA-Forge

./: .gitignore  README.md  backend.md  spec.md
.claude/skills/openfga/: .skillfish.json  AGENTS.md
.claude/skills/openfga/rules/: core-relations.md  core-schema-version.md  core-separation.md  core-tuples.md  core-types.md  design-hierarchy.md  design-modules.md  design-naming.md  design-organization.md  design-permissions.md  optimize-simplify.md  optimize-tuples.md  optimize-type-restrictions.md  relation-concentric.md  relation-conditions.md  relation-direct.md  relation-indirect.md  relation-usersets.md  relation-wildcards-as-booleans.md  relation-wildcards.md  roles-assignments.md  roles-simple.md  roles-static-combo.md  roles-when-to-use.md  sdk-dotnet.md  sdk-go.md  sdk-java.md  sdk-javascript.md  sdk-python.md  test-check-assertions.md  test-cli.md  test-conditions.md  test-fga-yaml.md  (+3 more)
backend/: .env.example  Dockerfile  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/fga_forge/: __init__.py  compiler.py  emitter.py  parser.py  types.py  validator.py
backend/models/: project.py
backend/routers/: compiler.py  projects.py  templates.py  ws.py
backend/schemas/: compiler.py  project.py  template.py
backend/services/: compiler_service.py  project_service.py  template_service.py
backend/templates/: asset_management.json  bank_transfers.json  dynamic_roles.json  github_rbac.json  lxd_server.json  multi_tenant.json  saas_entitlements.json  team_hierarchy.json
backend/tests/: test_compiler.py  test_projects.py  test_templates.py
